--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "node ./cmd/main.ts"
+  }
 }
