--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
-    "ts-node": "^10.9.2",
-    "tsc": "^2.0.4"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "node ./cmd/main.ts"
-  },
-  "devDependencies": {
-    "typescript": "^5.5.4"
+    "dev": "node ./cmd/main.js"
   }
 }
